<resources>
    <string name="app_name">News Dock</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!--sub category titles -->
    <string name="cat_business">Business</string>
    <string name="cat_entertainment">Entertainment</string>
    <string name="cat_health">Health</string>
    <string name="cat_science">Science</string>
    <string name="cat_sports">Sports</string>
    <string name="cat_technology">Technology</string>
    <string name="share_news">share news</string>
    <string name="thumb_nail_image">thumb nail image</string>
    <string name="share_article">Share News Article</string>


</resources>
