<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_business_black"
            android:title="@string/cat_business" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_entertainment"
            android:title="@string/cat_entertainment" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_health"
            android:title="@string/cat_health" />

        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/ic_science_black"
            android:title="@string/cat_science" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_sports_soccer_black"
            android:title="@string/cat_sports" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_technology"
            android:title="@string/cat_technology" />
    </group>
</menu>
